--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
-pillow
+contourpy==1.3.3 ; python_version >= "3.13"
+cycler==0.12.1 ; python_version >= "3.13"
+fonttools==4.60.1 ; python_version >= "3.13"
+kiwisolver==1.4.9 ; python_version >= "3.13"
+matplotlib==3.10.6 ; python_version >= "3.13"
+numpy==2.3.3 ; python_version >= "3.13"
+packaging==25.0 ; python_version >= "3.13"
+pillow==11.3.0 ; python_version >= "3.13"
+pyparsing==3.2.5 ; python_version >= "3.13"
+python-dateutil==2.9.0.post0 ; python_version >= "3.13"
+qutip==5.2.1 ; python_version >= "3.13"
+scipy==1.16.2 ; python_version >= "3.13"
+six==1.17.0 ; python_version >= "3.13"
